# ISS

./: CMakeLists.txt  README.md  Solar-pannels.cpp  develop.cpp  main  main.cpp  parser.cpp  spacecontrol.cpp  spacecontrol.h
python/: coordinates1.txt  illumination zone.py  issdata.py  my_module.py  stations.txt
sofa/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: main.cpp  spacecontrol.cpp  spacecontrol.h  sttracker.cpp  sttracker.h
